--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+wireless-tools (30~pre9-8) unstable; urgency=low
+
+  * Add type to IMPORT keyword in ifrename's udev rules file. Closes: #650606
+
+ -- Guus Sliepen <guus@debian.org>  Fri, 23 Dec 2011 16:02:18 +0100
+
+wireless-tools (30~pre9-7) unstable; urgency=low
+
+  * Add missing Build-Depend on dpkg-dev. Closes: #644744
+  * Set key values after setting default key and key mode. Closes: #624603
+
+ -- Guus Sliepen <guus@debian.org>  Mon, 14 Nov 2011 11:09:01 +0100
+
+wireless-tools (30~pre9-6) unstable; urgency=low
+
+  * Apply patch from Riku Voipio to support multiarch. Closes: #642434
+  * Bump Standards-Version.
+  * Provide build-arch and build-indep targets in debian/rules. 
+  * Use /usr/share/dpkg/default.mk in debian/rules.
+  * Allow CFLAGS to be set from debian/rules.
+
+ -- Guus Sliepen <guus@debian.org>  Sun, 02 Oct 2011 21:43:21 +0200
+
 wireless-tools (30~pre9-5) unstable; urgency=low
 
   * Apply patch from Steve Langesak clarifying the iftab manpage.
